k8s-mysql-deployment.yaml
apiVersion: apps/v1       # 标识资源版本
kind: Deployment
metadata:
  name: webook-live-mysql
  labels:
    app: webook-live-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-live-mysql
  template:
    metadata:
      name: webook-live-mysql
      labels:
        app: webook-live-mysql
    spec:
      containers:
        - name: webook-live-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent     # 本地没有镜像
          volumeMounts:                     # 容器用那个持久化卷，与volumes里的name对应。
            - mountPath: /var/lib/mysql     # 对应MySQL数据存储
              name: mysql-storage
          ports:
            - containerPort: 3306           # 对外暴露的端口
      restartPolicy: Always                 # 重启永远去拉新镜像
      volumes:     # 声明pod有哪些持久化卷
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-live-claim
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: webook-hadoop-live-claim
