k8s-webook-deployment.yaml
apiVersion: apps/v1       # 标识资源版本
kind: Deployment
metadata:
  name: webook            # deployment的名称
spec:                     # specification 规格说明
  replicas: 3             # 副本数量，即3个POD
  selector:               # 筛选期，定义如何查找要管理的POD
    matchLabels:
      app: webook-live    # 键值对映射
  # 描述POD
  template:
    metadata:
      name: webook-live
      labels:
        app: webook-live
    # POD的具体信息
    spec:
      containers:         # 一个容器的定义
        - name: webook    # 容器名
          image: ly/webook-live:v0.0.1     #
          ports:
            - containerPort: 8080    # 与main.go里起服务的端口对应
