k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
      port: 11479
      targetPort: 6379
      nodePort: 30003  # 外部访问端口范围：30000-32767
  type: NodePort
